// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QualificationButtonElement must match the snapshot with default Props 1`] = `
<ButtonStyle
  as="QualifyButtonStyle"
  color="red"
  onClick={[Function]}
  tabIndex={0}
>
  foo
  <CounterStyle
    aria-hidden={true}
  >
    +1
  </CounterStyle>
</ButtonStyle>
`;

exports[`QualificationButtonElement must return the diff between snapshot when proposal is qualified or not 1`] = `
Snapshot Diff:
- First value
+ Second value

  <ButtonStyle
-   as="UnqualifyButtonStyle"
+   as="QualifyButtonStyle"
    color="red"
    onClick={[Function handleClick]}
    tabIndex={0}
  >
    foo
    <CounterStyle
      aria-hidden={true}
    >
-     0
+     +1
    </CounterStyle>
  </ButtonStyle>
`;

exports[`QualificationButtonElement must return the diff between snapshot with a negative vs a postive Tab Index 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,10 +1,10 @@
  <ButtonStyle
    as="QualifyButtonStyle"
    color="red"
    onClick={[Function handleClick]}
-   tabIndex="-1"
+   tabIndex="0"
  >
    foo
    <CounterStyle
      aria-hidden={true}
    >
`;
